--- a/versions.gradle
+++ b/versions.gradle
@@ -50,6 +50,7 @@ versions.kotlin = "1.3.0"
 versions.paging = "2.1.0-rc01"
 versions.navigation = "1.0.0-alpha09"
 versions.work = "1.0.0-beta01"
+versions.koin="1.0.2"
 def deps = [:]
 
 def support = [:]
@@ -84,6 +85,7 @@ def retrofit = [:]
 retrofit.runtime = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 retrofit.gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
 retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
+retrofit.adapter_rxjava2= "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 deps.retrofit = retrofit
 deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
 
@@ -160,7 +162,14 @@ navigation.safe_args_plugin = "android.arch.navigation:navigation-safe-args-grad
 navigation.navigation_ui_ktx="android.arch.navigation:navigation-ui-ktx:$versions.navigation"
 deps.navigation = navigation
 
+def koin=[:]
+koin.koin_android="org.koin:koin-android:$versions.koin"
+koin.koin_android_viewmodel="org.koin:koin-androidx-viewmodel:$versions.koin"
+deps.koin=koin
+
 ext.deps = deps
+
+
 
 def addRepos(RepositoryHandler handler) {
     handler.google()
