Core Services for retrofit for communicating with the backend

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
     //RX
     implementation deps.rxjava2
     implementation deps.rx_android
+
+    //JWT
+    implementation deps.jwt.jwtdecode
 }
